plugins {
    id 'java-gradle-plugin'
    id 'eclipse'
    id 'com.gradle.plugin-publish' version '0.14.0'
}

repositories {
  mavenLocal()
  mavenCentral()
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

eclipse {
  classpath {
    downloadSources = true
  }
}

group = 'com.squarespace.gradle.jasmin'
version = '0.8'

sourceCompatibility = 8
targetCompatibility = 8

pluginBundle {
  website = 'https://github.com/Squarespace/gradle-jasmin-plugin/'
  vcsUrl = 'https://github.com/Squarespace/gradle-jasmin-plugin.git'
  tags = ['bytecode', 'jvm', 'assembler', 'jasmin']
}

gradlePlugin {
  plugins {
    jasminPlugin {
      id = 'com.squarespace.jasmin'
      displayName = 'Jasmin assembler'
      description = 'Assemble Jasmin source to JVM classfiles'
      implementationClass = 'com.squarespace.gradle.jasmin.JasminPlugin'
    }
  }
}

wrapper {
  gradleVersion = '7.0.2'
}

dependencies {
  implementation 'ca.mcgill.sable:jasmin:3.0.2'
}

